fix: hero section is spacing is upto the design

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 
 
 .container {
-    width: 1246px;
+    width: 1281px;
     height: 911px;
     background-color: #fff;
     font-family: var(--fontFamily-poppins);
@@ -82,35 +82,38 @@ body {
 
 .section-header {
     width: 100%;
+    height: 56px;
 }
 
 .navbar {
-    width: 100%;
-    height: 58px;
+    width: 1281px;
+    height: 56px;
     /* background: red; */
     display: flex;
     align-items: center;
+    gap: 345px;
 }
 
 .navitem-logo {
     font-family: var(--fontFamily-volkhov);
-    font-size: 54px;
-    margin-right: 332px;
+    font-size: 52px;
+    line-height: 52px;
     cursor: pointer;
 }
 
 
 .navlist {
-    flex: 1;
+    height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 58px;
 }
 
 .navitem {
     font-size: 16px;
     cursor: pointer;
     color: #484848;
+    white-space: nowrap;
 }
 
 .navitem.sign-up {
@@ -129,7 +132,7 @@ body {
                          "l b r";
     /* grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr; */
-    gap: 10px;
+    /* gap: 10px; */
     height: 756px;
     margin-top: 92px;
 }
@@ -137,17 +140,25 @@ body {
 .hero-left-image-box {
     grid-area: l;
     background-color: #e0e0e0;
+    width: 392px;
     height: 756px;
-    margin-right: 49px;
+    margin-right: 35px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     border-radius: 10px;
 }
 
+.hero-left-image-box img {
+    width: 100%;
+    height: 570px;
+    object-fit: contain;
+}
+
 .sale-image-top {
     grid-area: m;
     background-color: #e0e0e0;
+    width: 426px;
     height: 150px;
     display: flex;
     flex-direction: column;
@@ -156,27 +167,31 @@ body {
 }
 
 .sale-image-top img {
-    height: 145px;
+    width: 426px;
+    height: 150px;
     object-fit: contain;
 }
 
 .sale-text {
     grid-area: s;
     color: black;
+    width: 399px;
     height: 383px;
     margin-block: 36px;
     border-radius: 10px;
+    justify-self: center;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
+    text-align: center;
 }
 
 .sale-text .ultimate div {
     font-size: 91px;
+    line-height: 91px;
     font-weight: 500;
     color: #484848;
-    line-height: 1;
+    letter-spacing: -3.2px;
     justify-self: center;
 }
 
@@ -184,11 +199,12 @@ body {
     font-size: 187px;
     color: transparent;
     -webkit-text-stroke: 1px #484848;
-    font-weight: bold;
-    line-height: 1;
-    padding: 0;
-    margin: 0;
-    vertical-align: baseline;
+    font-weight: medium;
+    line-height: 187px;
+    letter-spacing: -10.2px;
+    /* padding: 0;
+    margin: 0; */
+    /* vertical-align: baseline; */
     margin-inline: auto;
     /* padding: 10px; */
 }
@@ -196,7 +212,7 @@ body {
 .sale-text .collection {
     font-size: 20px;
     color: #484848;
-    font-weight: 400;
+    letter-spacing: 2px;
 }
 
 .sale-text .btn {
@@ -229,15 +245,18 @@ body {
 .hero-right-image-box {
     grid-area: r;
     background-color: #e0e0e0;
+    width: 392px;
     height: 756px;
-    margin-left: 54px;
+    margin-left: 36px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: center;
     border-radius: 10px;
 }
 
 .hero-right-image-box img {
+    width: 249px;
     height: 568px;
     object-fit: contain;
 }
